GNOME Bugzilla – Bug 674215
[patch] regression with updating tooltips
Last modified: 2016-06-06 01:49:06 UTC
The commit 51189ae260699f63862a3136a552ad369d4e336a introduces regression. The regression is that a tooltip for GtkStatusIcon (and maybe for everything else) updates only when moving mouse over icon. Normally, tooltip is updated at least once per second, even without moving mouse.
Created attachment 212165 [details] [review] proposed patch
confirmed. The _gtk_tooltip_handle_event (&event) was triggered in gtk_tooltip_trigger_tooltip_query (GdkDisplay *display) as the default handler. The event was a synthesized event and didn't even have its event.motion.device field set. Actually, the source_device will always be NULL, with the way the event was constructed in gtk_tooltip_trigger_tooltip_query. Since _gtk_tooltip_handle_event() is only used this way, the touch screen testing never reached in any situation. The event.motion.device should be set in the _gtk_tooltip_handle_event() before anyway can start making sense. Still even if source_device is NULL, it still doesn't not make sense to always return False on synthesized event. A system without input device should still be able to popup tooltips programmatically. no?
Looks like it affects all widgets. #693430 is related to this one.
*** Bug 693430 has been marked as a duplicate of this bug. ***