Make gtk_tooltip_trigger_tooltip_query work again

This was broken ever since we started looking at the
source device of the event.

https://bugzilla.gnome.org/show_bug.cgi?id=674215